--- a/tobanFJ_2014/index.html
+++ b/tobanFJ_2014/index.html
@@ -57,6 +57,36 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(08/16)2014年度東播フォークジャンボリーの動画を公開しております。</dt>
+					<dd>
+						ダイジェスト版をyoutubeで閲覧できます。ぜひご覧ください。<br/>
+						<a href='https://www.youtube.com/watch?v=iR0XpcNC9_E' target='_blank'>動画はこちら</a>
+					</dd>
+				</dl>
+				<dl>
+					<dt>(06/10)第二回東播フォークジャンボリーは無事終了いたしました！</dt>
+					<dd>
+						第２回東播フォークジャンボリーはたくさんの方々においで頂き成功裏に<br/>
+						終えることができました。観客の皆様、スタッフの皆さん、演奏者の皆さん<br/>
+						お疲れ様でした。来年また、お会いしたいです。
+					</dd>
+				</dl>
+				<dl>
+					<dt> (06/10)「PR情報」を更新しました。</dt>
+				</dl>
+				<dl>
+					<dt> (05/27)「PR情報」を更新しました。</dt>
+				</dl>
+				<dl>
+					<dt> (05/19)出演者紹介を掲載しました。</dt>
+					<dd>
+						<a href='#content02'>詳細は「出演者リスト」をご覧ください。</a>
+					</dd>
+				</dl>
+				<dl>
+					<dt>(05/13)「PR情報」を追加しました！</dt>
+				</dl>
+				<dl>
 					<dt>(03/25)第二回東播フォークジャンボリーの開催日時、出演バンドが決定しました！</dt>
 					<dd>
 						日時・会場は本サイトのトップ右上をご覧下さい。<br/>
@@ -67,18 +97,33 @@
 			</div>
 		</div>
 		
-		<!--
 		<div class="content-box">
 			<div class="content-header">
 				PR情報<small>(新聞・ラジオ等の掲載情報)</small>
 			</div>
 			<div class="content-body">
 				<dl>
-					<dt>情報待ち</dt>
+					<dt>(06/10)神戸新聞に当日の様子が掲載されました。</dt>
+					<dd>
+						<a target='_blank' href='http://www.kobe-np.co.jp/news/miki/201406/0007037448.shtml'>詳細はこちらをご覧ください。</a>
+					</dd>
+				</dl>
+				<dl>
+					<dt>(05/27)神戸新聞に掲載されました。</dt>
+					<dd>
+						<a target='_blank' href='http://www.kobe-np.co.jp/news/miki/201405/0006998540.shtml'>詳細はこちらをご覧ください。</a>
+					</dd>
+				</dl>
+				<dl>
+					<dt>(05/13)「谷五郎のはりまーるラジオ」にてPRしました。</dt>
+					<dd>
+						放送は以下の予定です。<br/>
+						・エフエムみっきい 5/30(金) 21:00〜 【再放送】5/31(土) 12:30〜<br/>
+						・BANBANラジオ 5/29(木) 19:30〜 【再放送】5/31(土)  9:00〜<br/>
+					</dd>
 				</dl>
 			</div>
 		</div>
-		-->
 				
 		<a name="content01"></a>
 		<div class="content-box">
@@ -115,12 +160,17 @@
 				出演者リスト
 			</div>
 			<div class="content-body">
+				<a href="etc/tfj2014_panf.pdf" target="_blank">
+					[ パンフレット（出演者紹介） ]
+				</a>
+				<br/>
+				<a href="img/panf_large.png" rel="lightbox" title="出演者リスト">
+					<img src="img/panf_small.png" width="600" height="437" alt="出演者表" />
+				</a>
+				<br/>
 				<a href="etc/timetable.pdf?v=140326" target="_blank">
-					※ こちらをクリックしてご確認ください。
-				</a><!--<br/>
-				<a href="img/timetable_b.jpg" rel="lightbox" title="出演者リスト">
-					<img src="img/timetable.jpg" width="500" height="353" alt="出演者表" />
-				</a>-->
+					[ タイムテーブル ]
+				</a>
 			</div>
 		</div>
 				
@@ -133,7 +183,9 @@
 				日時： 2014年06月08日（日） 10:00～16:30<br/>
 				会場： <a href="http://www2.city.miki.lg.jp/miki.nsf/0/9C52E948D6ABB8E6492574470019F834" target="_blank" >三木市民活動センター（福祉会館） 3階大ホール</a><br/>
 				料金： 無料（入場・観覧とも）<br/>
-				※ 駐車場、会場周辺の飲食などについての情報は後日掲載致します。
+				<a target="_blank" href="etc/parking_map.pdf?v=140423">
+					※ 会場案内（駐車場情報）についてはこちらをご確認ください。
+				</a>
 				<br/><br/>
 				<iframe width="640" height="320" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.jp/maps?f=q&amp;source=s_q&amp;hl=ja&amp;geocode=&amp;q=%E4%B8%89%E6%9C%A8%E5%B8%82%E6%B0%91%E6%B4%BB%E5%8B%95%E3%82%BB%E3%83%B3%E3%82%BF%E3%83%BC&amp;aq=&amp;sll=-72.028907,89.974508&amp;sspn=0.00578,0.033023&amp;brcurrent=3,0x600079cf942b200d:0xb194b94379048d6d,0&amp;ie=UTF8&amp;hq=%E4%B8%89%E6%9C%A8%E5%B8%82%E6%B0%91%E6%B4%BB%E5%8B%95%E3%82%BB%E3%83%B3%E3%82%BF%E3%83%BC&amp;hnear=&amp;radius=15000&amp;t=m&amp;ll=34.802669,134.985237&amp;spn=0.045106,0.109692&amp;z=13&amp;output=embed"></iframe><br /><small><a href="https://maps.google.co.jp/maps?f=q&amp;source=embed&amp;hl=ja&amp;geocode=&amp;q=%E4%B8%89%E6%9C%A8%E5%B8%82%E6%B0%91%E6%B4%BB%E5%8B%95%E3%82%BB%E3%83%B3%E3%82%BF%E3%83%BC&amp;aq=&amp;sll=-72.028907,89.974508&amp;sspn=0.00578,0.033023&amp;brcurrent=3,0x600079cf942b200d:0xb194b94379048d6d,0&amp;ie=UTF8&amp;hq=%E4%B8%89%E6%9C%A8%E5%B8%82%E6%B0%91%E6%B4%BB%E5%8B%95%E3%82%BB%E3%83%B3%E3%82%BF%E3%83%BC&amp;hnear=&amp;radius=15000&amp;t=m&amp;ll=34.802669,134.985237&amp;spn=0.045106,0.109692&amp;z=13" style="color:#0000FF;text-align:left">大きな地図で見る</a></small>
 			</div>
@@ -169,9 +221,55 @@
 				<dl>
 					<dt>＜協賛＞</dt>
 					<dd class="adbox">
-						<a target="_blank" href="http://basie-miki.cocolog-nifty.com/">Jazz café Basie<img src="img/ad/ad01.png?v=140326" /></a>
-						<a target="_blank" href="http://ecotoolmarket.com/">ecotool<img src="img/ad/ad02.png?v=140326" /></a>
-						<a target="_blank" href="#">小河邸の約束<img src="img/ad/ad03.png?v=140326" /></a>
+						<a target="_blank" href="http://basie-miki.cocolog-nifty.com/">
+							Jazz café Basie
+							<img src="img/ad/ad01.png?v=140326" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://www.ecotoolmarketco.com">
+							ecotool
+							<img src="img/ad/ad02.png?v=140326" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://www.youtube.com/channel/UCOhAnocmQC1aW6yjVgjCSuw">
+							小河邸の約束
+							<img src="img/ad/ad03.png?v=140420" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="https://maps.google.co.jp/maps?q=%E5%85%B5%E5%BA%AB%E7%9C%8C%E4%B8%89%E6%9C%
+A8%E5%B8%82%E6%9C%AB%E5%BA%833-14-23&lr=lang_ja">
+							ほっかほっか亭 三木末広店
+							<img src="img/ad/ad04.png?v=140420" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="https://www.facebook.com/tscgc">
+							町のギター屋さん Eyepoint
+							<img src="img/ad/ad05.png?v=140420" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://ameblo.jp/kitty50jp/">
+							気まぐれcaprishas
+							<img src="img/ad/ad06.png?v=140420" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://www.wagenya.com/">
+							薩摩地鶏 わげんや
+							<img src="img/ad/ad07.png?v=140420" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://tabelog.com/hyogo/A2804/A280403/28038881/">
+							房舎 -ぼうしゃ-
+							<img src="img/ad/ad08.png?v=140420" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://onsen-map.net/around_gourmet.cgi?shop=28031837">
+							Moncher TonTon
+							<img src="img/ad/ad09.png?v=140420" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://tabelog.com/hyogo/A2804/A280402/28027592/">
+							70's BAR TAKURO
+							<img src="img/ad/ad10.png?v=140420" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://ohana54.web.fc2.com/">
+							Live Cafe Ohana
+							<img src="img/ad/ad11.png?v=140420" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://tabelog.com/hyogo/A2804/A280402/28038787/">
+							唸屋
+							<img src="img/ad/ad12.png?v=140606" width="200px" height="200px" />
+						</a>
 					</dd>
 					<div class="clear"></div><br/>
 					<dt>＜後援＞</dt>
