協賛を最新に

--- a/tobanFJ_2015/index.html
+++ b/tobanFJ_2015/index.html
@@ -95,14 +95,12 @@
 						</dd>
 					</dl>
 				</div>
-				<!--
 				<div class="content-right">
-				<a href="img/flyer.jpg?v=140326" rel="lightbox" title="東播フォークジャンボリー2013 フライヤー">
+				<a href="img/flyer.jpg" rel="lightbox" title="東播フォークジャンボリー2015 フライヤー">
 					フライヤー（チラシ）↓<br/>
-					<img src="img/flyer_small.jpg?v=140326" width="200" height="280" alt="フライヤー（チラシ）" />
+					<img src="img/flyer_small.jpg" width="200" height="280" alt="フライヤー（チラシ）" />
 				</a>
 				</div>
-				-->
 				<div class="clear"></div>
 			</div>
 		</div>
@@ -113,7 +111,7 @@
 				出演者リスト・タイムテーブル
 			</div>
 			<div class="content-body">
-				詳細が決まり次第、情報を掲載します。お楽しみにお待ちください。
+				<a href="etc/timetable.pdf" target="_blank">こちらをクリック（印刷用のPDFが開きます。）</a>
 			</div>
 		</div>
 				
@@ -169,7 +167,82 @@
 				</dl>
 			</div>
 		</div>
-		
+
+		<a name="content05"></a>
+		<div class="content-box">
+			<div class="content-header">
+				協賛・リンク
+			</div>
+			<div class="content-body">
+				<dl>
+					<dt>＜協賛＞</dt>
+					<dd class="adbox">
+						<a target="_blank" href="http://basie-miki.cocolog-nifty.com/">
+							Jazz café Basie
+							<img src="img/ad/ad01.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://www.ecotoolmarketco.com">
+							ecotool
+							<img src="img/ad/ad02.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://ogawatei.jpn.org/">
+							小河邸の約束
+							<img src="img/ad/ad03.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="https://www.facebook.com/tscgc">
+							町のギター屋さん Eyepoint
+							<img src="img/ad/ad05.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://www.wagenya.com/">
+							薩摩地鶏 わげんや
+							<img src="img/ad/ad07.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://tabelog.com/hyogo/A2804/A280403/28038881/">
+							房舎 -ぼうしゃ-
+							<img src="img/ad/ad08.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://onsen-map.net/around_gourmet.cgi?shop=28031837">
+							Moncher TonTon
+							<img src="img/ad/ad09.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://tabelog.com/hyogo/A2804/A280402/28027592/">
+							70's BAR TAKURO
+							<img src="img/ad/ad10.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="http://ohana54.web.fc2.com/">
+							Live Cafe Ohana
+							<img src="img/ad/ad11.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="#">
+							高砂いろは食品
+							<img src="img/ad/ad13.png" width="200px" height="200px" />
+						</a>
+						<a target="_blank" href="#">
+							株式会社エナジー・オートノミー・ソリューション
+							<img src="img/ad/ad14.png" width="200px" height="180px" />
+						</a>
+					</dd>
+					<div class="clear"></div><br/>
+					<dt>＜後援＞</dt>
+					<dd class="chbox">
+						<ul>
+							<li><a target="_blank" href="http://www.fm-miki.jp/">エフエムみっきぃ</a></li>
+							<li><a target="_blank" href="http://www.miki.or.jp/">社会福祉法人 三木市社会福祉協議会</a></li>
+							<li><a target="_blank" href="http://www.miki.or.jp/mvsc/">ボランタリー活動プラザみき</a></li>
+						</ul>
+					</dd>
+					<div class="clear"></div><br/>
+					<dt>＜フォーク・ジャンボリー先輩方＞</dt>
+					<dd class="chbox">
+						<ul>
+							<li><a target="_blank" href="http://hamanako-fj.com/">浜名湖フォークジャンボリー</a></li>
+							<li><a target="_blank" href="http://nishimikawafj.web.fc2.com/">西三河フォークジャンボリー</a></li>
+						</ul>
+					</dd>
+					<div class="clear"></div>
+				</dl>
+			</div>
+		</div>
 				
 		<a name="content06"></a>
 		<div class="content-box">
