--- a/tobanFJ_2015/index.html
+++ b/tobanFJ_2015/index.html
@@ -111,7 +111,9 @@
 				出演者リスト・タイムテーブル
 			</div>
 			<div class="content-body">
-				<a href="etc/timetable.pdf" target="_blank">こちらをクリック（印刷用のPDFが開きます。）</a>
+				<a href="img/setlist.jpg" rel="lightbox" title="東播フォークジャンボリー2015 出演リスト">
+					<img src="img/setlist_small.jpg" alt="出演者リスト" />
+				</a>
 			</div>
 		</div>
 				
