renewed panflette, and added new infomation for players

--- a/tobanFJ_2015/index.html
+++ b/tobanFJ_2015/index.html
@@ -57,6 +57,12 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(05/19)パンフレットを更新しました！</dt>
+					<dd>
+						出演者リストを更新しております。ご確認ください。
+					</dd>
+				</dl>
+				<dl>
 					<dt>(04/12)第３回東播フォークジャンボリーの開催日時、出演バンドが決定しました！</dt>
 					<dd>
 						日時・会場は本サイトのトップ右上をご覧下さい。<br/>
@@ -67,6 +73,7 @@
 			</div>
 		</div>
 		
+		<!--
 		<div class="content-box">
 			<div class="content-header">
 				PR情報<small>(新聞・ラジオ等の掲載情報)</small>
@@ -75,6 +82,7 @@
 				
 			</div>
 		</div>
+		-->
 				
 		<a name="content01"></a>
 		<div class="content-box">
@@ -111,8 +119,9 @@
 				出演者リスト・タイムテーブル
 			</div>
 			<div class="content-body">
-				<a href="img/setlist.jpg" rel="lightbox" title="東播フォークジャンボリー2015 出演リスト">
-					<img src="img/setlist_small.jpg" alt="出演者リスト" />
+				※クリックすると印刷用のPDFファイルが開きます。<br/>
+				<a href="etc/panf.pdf" title="東播フォークジャンボリー2015 出演リスト">
+					<img src="img/setlist_panf.jpg" alt="出演者リスト" />
 				</a>
 			</div>
 		</div>
@@ -137,6 +146,14 @@
 				出演者へのお知らせ
 			</div>
 			<div class="content-body">
+				<dl>
+					<dt>直前ミーティングを行いますので出演バンド代表者はご参集下さい。</dt>
+					<dd>
+						日時・・・5月24日(日) 10:00〜12:00<br/>
+						場所・・・三木市民活動センター 2階会議室<br/>
+						内容・・・当日の運用事項について（出演順・役割分担）、参加料の徴収、就職手配希望者の確認
+					</dd>
+				</dl>
 				<dl>
 					<dt>オープニング、エンディング曲のコード譜を掲載しています。</dt>
 					<dd>
