--- a/tobanFJ_2015/index.html
+++ b/tobanFJ_2015/index.html
@@ -151,7 +151,7 @@
 					<dd>
 						日時・・・5月24日(日) 10:00〜12:00<br/>
 						場所・・・三木市民活動センター 2階会議室<br/>
-						内容・・・当日の運用事項について（出演順・役割分担）、参加料の徴収、就職手配希望者の確認
+						内容・・・当日の運用事項について（出演順・役割分担）、参加料の徴収、昼食手配希望者の確認
 					</dd>
 				</dl>
 				<dl>
