--- a/tobanFJ_2015/index.html
+++ b/tobanFJ_2015/index.html
@@ -57,12 +57,15 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(05/25)マスコミ（新聞・ラジオ）によるPR情報を掲載しました！</dt>
+					<dd>
+						今後、記事になった情報を順次公開していきます。<br/>
+						下にある「PR情報(新聞・ラジオ等マスコミ掲載情報)」をご覧ください。
+					</dd>
 					<dt>(05/19)パンフレットを更新しました！</dt>
 					<dd>
 						出演者リストを更新しております。ご確認ください。
 					</dd>
-				</dl>
-				<dl>
 					<dt>(04/12)第３回東播フォークジャンボリーの開催日時、出演バンドが決定しました！</dt>
 					<dd>
 						日時・会場は本サイトのトップ右上をご覧下さい。<br/>
@@ -73,16 +76,21 @@
 			</div>
 		</div>
 		
-		<!--
 		<div class="content-box">
 			<div class="content-header">
 				PR情報<small>(新聞・ラジオ等の掲載情報)</small>
 			</div>
 			<div class="content-body">
-				
+				<dl>
+					<dt>(5/25)神戸新聞に直前ミーティングの写真ととともに記事が掲載されました！</dt>
+					<dd>
+						<a href="img/0525_news_large.jpg" rel="lightbox" title="2015/05/25 神戸新聞掲載記事">
+							<img src="img/0525_news.jpg" width="480" />
+						</a>
+					</dd>
+				</dl>
 			</div>
 		</div>
-		-->
 				
 		<a name="content01"></a>
 		<div class="content-box">
@@ -236,7 +244,7 @@
 							高砂いろは食品
 							<img src="img/ad/ad13.png" width="200px" height="200px" />
 						</a>
-						<a target="_blank" href="#">
+						<a target="_blank" href="http://www.energyautonomy-solve.info">
 							株式会社エナジー・オートノミー・ソリューション
 							<img src="img/ad/ad14.png" width="200px" height="180px" />
 						</a>
