event finished: update news and notice

--- a/tobanFJ_2015/index.html
+++ b/tobanFJ_2015/index.html
@@ -57,6 +57,18 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>
+						(06/07)第３回東播フォークジャンボリーは無事終了いたしました！
+					</dt>
+					<dd>
+						当日運営は参加者全員の協力のお陰で大変スムーズに進行できました。<br/>
+						そして、素晴らしい演奏と歌・・・昨年に比べてレベルアップした、聴き応えのあるイベントとすることが出来ました。<br/>
+						観客の皆様からもたくさんの賞賛の声が届いております。<br/>
+						観客の皆様、スタッフの皆さん、演奏者の皆さん お疲れ様でした。来年また、お会いしましょう。<br/>
+						<a href="img/0607_photo_large.jpg" rel="lightbox" title="当日の記念写真">
+							<img src="img/0607_photo.jpg" width="480" />
+						</a>
+					</dd>
 					<dt>(05/25)マスコミ（新聞・ラジオ）によるPR情報を掲載しました！</dt>
 					<dd>
 						今後、記事になった情報を順次公開していきます。<br/>
@@ -82,8 +94,22 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(06/09)神戸新聞に当日の様子が掲載されました。詳細はこちらをご覧ください。</dt>
+					<dd>
+						<a target="_blank" href="http://www.kobe-np.co.jp/news/miki/201506/0008105211.shtml">
+							ウェブサイトではこちらに掲載されています。
+						</a>
+						<br/>
+						<a href="img/0607_news_large.jpg" rel="lightbox" title="2015/06/09 神戸新聞掲載記事">
+							<img src="img/0607_news.jpg" width="480" />
+						</a>
+					</dd>
 					<dt>(5/25)神戸新聞に直前ミーティングの写真ととともに記事が掲載されました！</dt>
 					<dd>
+						<a target="_blank" href="http://www.kobe-np.co.jp/news/miki/201505/0008057208.shtml">
+							ウェブサイトではこちらに掲載されています。
+						</a>
+						<br/>
 						<a href="img/0525_news_large.jpg" rel="lightbox" title="2015/05/25 神戸新聞掲載記事">
 							<img src="img/0525_news.jpg" width="480" />
 						</a>
