--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
   <head>
-    <title>tobanfj.tk</title>
+    <title>東播フォークジャンボリー2016 特設サイト</title>
     <meta name="description" content="tobanfj.tk">
     <meta name="keywords" content="tobanfj.tk">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
