--- a/tobanFJ_2016/index.html
+++ b/tobanFJ_2016/index.html
@@ -205,11 +205,11 @@
 						</a>
 						<a target="_blank" href="http://www.kanzawa.co.jp/">
 							神沢鉄工
-							<img src="img/ad/ad02.png" width="200px" height="200px" />
+							<img src="img/ad/printing.png" width="200px" height="200px" />
 						</a>
 						<a target="_blank" href="http://ogawatei.jpn.org/">
 							小河邸の約束
-							<img src="img/ad/ad03.png" width="200px" height="200px" />
+							<img src="img/ad/printing.png" width="200px" height="200px" />
 						</a>
 						<a target="_blank" href="https://www.facebook.com/tscgc">
 							町のギター屋さん Eyepoint
