--- a/tobanFJ_2016/index.html
+++ b/tobanFJ_2016/index.html
@@ -219,11 +219,11 @@
 							薩摩地鶏 わげんや
 							<img src="img/ad/ad07.png" width="200px" height="200px" />
 						</a>
-						<a target="_blank" href="http://tabelog.com/hyogo/A2804/A280403/28038881/">
+						<a target="_blank" href="http://www.wagenya.com/">
 							房舎 -ぼうしゃ-
 							<img src="img/ad/ad08.png" width="200px" height="200px" />
 						</a>
-						<a target="_blank" href="http://onsen-map.net/around_gourmet.cgi?shop=28031837">
+						<a target="_blank" href="http://tabelog.com/hyogo/A2804/A280402/28031837/">
 							Moncher TonTon
 							<img src="img/ad/ad09.png" width="200px" height="200px" />
 						</a>
@@ -234,10 +234,6 @@
 						<a target="_blank" href="http://ohana54.web.fc2.com/">
 							Live Cafe Ohana
 							<img src="img/ad/ad11.png" width="200px" height="200px" />
-						</a>
-						<a target="_blank" href="#">
-							高砂いろは食品
-							<img src="img/ad/ad13.png" width="200px" height="200px" />
 						</a>
 						<a target="_blank" href="http://www.energyautonomy-solve.info">
 							株式会社エナジー・オートノミー・ソリューション
