fix old version links

--- a/tobanFJ_2016/index.html
+++ b/tobanFJ_2016/index.html
@@ -294,9 +294,9 @@
 			</div>
 			<div class="content-body">
 				<ul class="chbox">
-					<li><a href="./tobanFJ_2013/" target="_blank">第１回（2013年度 - 2013/06/09）</a></li>
-					<li><a href="./tobanFJ_2014/" target="_blank">第２回（2014年度 - 2014/06/08）</a></li>
-					<li><a href="./tobanFJ_2014/" target="_blank">第３回（2015年度 - 2015/06/07）</a></li>
+					<li><a href="../tobanFJ_2013/" target="_blank">第１回（2013年度 - 2013/06/09）</a></li>
+					<li><a href="../tobanFJ_2014/" target="_blank">第２回（2014年度 - 2014/06/08）</a></li>
+					<li><a href="../tobanFJ_2014/" target="_blank">第３回（2015年度 - 2015/06/07）</a></li>
 				</ul>
 			</div>
 		</div>
