--- a/tobanFJ_2016/index.html
+++ b/tobanFJ_2016/index.html
@@ -205,11 +205,11 @@
 						</a>
 						<a target="_blank" href="http://www.kanzawa.co.jp/">
 							神沢鉄工
-							<img src="img/ad/printing.png" width="200px" height="200px" />
+							<img src="img/ad/ad_kanzawa.png" width="200px" height="200px" />
 						</a>
 						<a target="_blank" href="http://ogawatei.jpn.org/">
 							小河邸の約束
-							<img src="img/ad/printing.png" width="200px" height="200px" />
+							<img src="img/ad/ad_ogawatei.png" width="200px" height="200px" />
 						</a>
 						<a target="_blank" href="https://www.facebook.com/tscgc">
 							町のギター屋さん Eyepoint
@@ -241,27 +241,27 @@
 						</a>
 						<a target="_blank" href="http://www.garagebugcustom.jp/">
 							GARRAGE BUG
-							<img src="img/ad/printing.png" width="200px" height="180px" />
+							<img src="img/ad/ad_garrage_bug.png" width="200px" height="180px" />
 						</a>
 						<a target="_blank" href="http://www.navitime.co.jp/poi?spt=02022.24038">
 							ほっかほか亭三木末広店
-							<img src="img/ad/printing.png" width="200px" height="180px" />
+							<img src="img/ad/ad_bento.png" width="200px" height="180px" />
 						</a>
 						<a target="_blank" href="http://www.takasago-parking.com/立ち飲み処-宮先酒店/">
 							Penny Lane（宮先酒店）
-							<img src="img/ad/printing.png" width="200px" height="180px" />
+							<img src="img/ad/ad_penny.png" width="200px" height="180px" />
 						</a>
 						<a target="_blank" href="http://loco.yahoo.co.jp/place/g-PN0rq3e-B-M/">
 							焼きとり釜飯のたつみや
-							<img src="img/ad/printing.png" width="200px" height="180px" />
+							<img src="img/ad/ad_tatsumiya.png" width="200px" height="180px" />
 						</a>
 						<a target="_blank" href="http://hanafusa-cake.com/">
 							ハナフサ
-							<img src="img/ad/printing.png" width="200px" height="180px" />
+							<img src="img/ad/ad_hanafusa.png" width="200px" height="180px" />
 						</a>
 						<a target="_blank" href="http://bigman.dreamlog.jp/">
 							洋楽オヤジの集まる服屋さんBIGMAN
-							<img src="img/ad/printing.png" width="200px" height="180px" />
+							<img src="img/ad/ad_bigman.png" width="200px" height="180px" />
 						</a>
 					</dd>
 					<div class="clear"></div><br/>
