--- a/tobanFJ_2016/index.html
+++ b/tobanFJ_2016/index.html
@@ -57,6 +57,21 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(06/03)ラジオ関西「わがまちひょうご」でインタービューがオンエアされます！</dt>
+					<dd>
+						会長のインタビューされます。ぜひお聴きください。<br/>
+						オンエアの時間は 2016/06/03 17:15頃です。
+					</dd>
+				</dl>
+				<dl>
+					<dt>(06/02)神戸新聞に掲載されました！</dt>
+					<dd>
+					<a href="img/news0602.jpg" rel="lightbox" title="2016/06/02 神戸新聞掲載記事">
+						<img src="img/news0602_s.jpg" width="480" />
+					</a>
+					</dd>
+				</dl>
+				<dl>
 					<dt>(04/01)第4回東播フォークジャンボリーの開催日時、出演バンドが決定しました！</dt>
 					<dd>
 						日時・会場は本サイトのトップ右上をご覧下さい。<br/>
@@ -135,6 +150,10 @@
 			</div>
 			<div class="content-body">
 				※クリックすると印刷用のPDFファイルが開きます。<br/>
+				<a href="etc/panf_full.pdf" target="_blank" title="東播フォークジャンボリー2016 パンフレット">
+					<img src="etc/panf_small.jpg" alt="パンフレット" />
+				</a>
+				<br/>
 				<a href="etc/timetable.pdf" target="_blank" title="東播フォークジャンボリー2016 出演リスト">
 					<img src="img/setlist_small.png" alt="出演者リスト" />
 				</a>
