add finish iunfo

--- a/tobanFJ_2016/index.html
+++ b/tobanFJ_2016/index.html
@@ -57,6 +57,30 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(06/05) 神戸新聞に掲載されました！</dt>
+					<dd>
+					<a href="img/news0606.jpg" rel="lightbox" title="2016/06/06 神戸新聞掲載記事">
+						<img src="img/news0606_s.jpg" width="240" />
+					</a>
+					</dd>
+				</dl>
+				<dl>
+					<dt>(06/05) 第４回東播フォークジャンボリーは無事終了いたしました！</dt>
+					<dd>
+						第４回東播フォークジャンボリーは無事終了いたしました！<br/>
+						今回も参加者全員の協力で大成功に終えることが出来ました。<br/><br/>
+						観客は約３２０名＋α＝３５０名<br/>
+						アンケート回収は４３枚<br/>
+						演奏参加者は６３名 スタッフは１０名<br/>
+						４００名以上の方々が、会場に集まってくれました。<br/><br/>
+						終演後、ロビーにて「♪～部屋のあかり消したまままたあうその日まで♪～♪」を出演者で合唱しながら観客の皆様をお見送りしました。<br/>
+						観客の皆様、スタッフの皆さん、演奏者の皆さん お疲れ様でした。来年また、お会いしましょう。<br/><br/>
+						<a href="img/finish.jpg" rel="lightbox" title="第四回東播フォークジャンボリー集合写真">
+							<img src="img/finish_s.jpg" width="480" />
+						</a>
+					</dd>
+				</dl>
+				<dl>
 					<dt>(06/03)ラジオ関西「わがまちひょうご」でインタービューがオンエアされます！</dt>
 					<dd>
 						会長のインタビューされます。ぜひお聴きください。<br/>
