add youtube link

--- a/tobanFJ_2016/index.html
+++ b/tobanFJ_2016/index.html
@@ -57,6 +57,12 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(10/05) 当日のダイジェスト映像が完成、YouTubeにupしました！</dt>
+					<dd>
+						<iframe width="480" height="270" src="https://www.youtube.com/embed/p3KTTYfnVko" frameborder="0" allowfullscreen></iframe>
+					</dd>
+				</dl>
+				<dl>
 					<dt>(06/05) 神戸新聞に掲載されました！</dt>
 					<dd>
 					<a href="img/news0606.jpg" rel="lightbox" title="2016/06/06 神戸新聞掲載記事">
