協賛画像修正 タイムテーブル修正 リンク先をGoogleDriveに

--- a/tobanFJ_2017/index.html
+++ b/tobanFJ_2017/index.html
@@ -134,9 +134,9 @@
 				出演者リスト・タイムテーブル
 			</div>
 			<div class="content-body">
-				※クリックすると印刷用のPDFファイルが開きます。<br/>
+				※クリックすると印刷用のファイルが開きます。<br/>
 				※2会場同時開催のため、同時刻で複数の出演が記載されていることに留意ください。<br/>
-				<a href="etc/timetable.pdf" target="_blank" title="東播フォークジャンボリー2017 出演リスト">
+				<a href="https://drive.google.com/open?id=0B8dQQU7lF0d8cU0xdXhEYkM4U0J4eHhRS0FnY0k1cHVZclVr" target="_blank" title="東播フォークジャンボリー2017 出演リスト">
 					<img src="img/timetable.png" alt="出演者リスト" />
 				</a>
 			</div>
@@ -246,11 +246,11 @@
 						</a>
 						<a target="_blank" href="https://www.facebook.com/ecotoolmarket">
 							ecotool market
-							<img src="img/ad/ad_ecotool.png" width="200px" height="180px" />
+							<img src="img/ad/ad_ecotool.png" width="200px" height="200px" />
 						</a>
 						<a target="_blank" href="http://fujii-s.com/">
 							藤井酒販
-							<img src="img/ad/ad_fujii.png" width="200px" height="180px" />
+							<img src="img/ad/ad_fujii.png" width="200px" height="200px" />
 						</a>
 					</dd>
 					<div class="clear"></div><br/>
