--- a/tobanFJ_2017/index.html
+++ b/tobanFJ_2017/index.html
@@ -226,7 +226,7 @@
 						</a>
 						<a target="_blank" href="http://ohana54.web.fc2.com/">
 							Live Cafe Ohana
-							<img src="img/ad/ad11.png" width="200px" height="200px" />
+							<img src="img/ad/ad_ohana.png" width="200px" height="200px" />
 						</a>
 						<a target="_blank" href="http://www.energyautonomy-solve.info">
 							株式会社エナジー・オートノミー・ソリューション
