フライやのサムネイル作るの面倒でやめた

--- a/tobanFJ_2017/index.html
+++ b/tobanFJ_2017/index.html
@@ -121,7 +121,7 @@
 				<div class="content-right">
 				<a href="img/flyer.jpg" rel="lightbox" title="東播フォークジャンボリー2017 フライヤー">
 					フライヤー（チラシ）↓<br/>
-					<img src="img/flyer_small.jpg" width="200" height="280" alt="フライヤー（チラシ）" />
+					<img src="img/flyer.jpg" width="200" alt="フライヤー（チラシ）" />
 				</a>
 				</div>
 				<div class="clear"></div>
