add PR information and panf

--- a/tobanFJ_2017/index.html
+++ b/tobanFJ_2017/index.html
@@ -57,6 +57,22 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(06/02)ラジオ関西でインタビューがオンエアされます。</dt>
+					<dd>
+						ラジオ関西「わがまちひょうご」でインタビューがオンエアされます。時間は 06/02 17:15-17:25 です。
+					</dd>
+					<dt>(06/01)神戸新聞に掲載されました。</dt>
+					<dd>
+						<a href="img/news_060301.jpg" rel="lightbox" title="神戸新聞掲載記事">
+							<img src="img/news_060301.jpg" width="480" />
+						</a>
+					</dd>
+					<dt>(06/01)広報三木に広告しました。</dt>
+					<dd>
+						<a href="img/news_060302.jpg" rel="lightbox" title="広報三木">
+							<img src="img/news_060302.jpg" width="480" />
+						</a>
+					</dd>
 					<dt>(03/25)第5回東播フォークジャンボリーの開催日時、出演バンドが決定しました！</dt>
 					<dd>
 						日時・会場は本サイトのトップ右上をご覧下さい。<br/>
@@ -134,9 +150,8 @@
 				出演者リスト・タイムテーブル
 			</div>
 			<div class="content-body">
-				※クリックすると印刷用のファイルが開きます。<br/>
-				※2会場同時開催のため、同時刻で複数の出演が記載されていることに留意ください。<br/>
-				<a href="https://drive.google.com/open?id=0B8dQQU7lF0d8cU0xdXhEYkM4U0J4eHhRS0FnY0k1cHVZclVr" target="_blank" title="東播フォークジャンボリー2017 出演リスト">
+				※クリックすると開場にて配布予定のパンフレットが開きます。ご参照ください。<br/>
+				<a href="https://drive.google.com/open?id=0B8dQQU7lF0d8ZFYwWEt0WUJVNDZSbWxibGVadk0xUXo3aFo0" target="_blank" title="東播フォークジャンボリー2017 パンフレット">
 					<img src="img/timetable.png" alt="出演者リスト" />
 				</a>
 			</div>
