add finish topic

--- a/tobanFJ_2017/index.html
+++ b/tobanFJ_2017/index.html
@@ -57,6 +57,25 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(06/05) 神戸新聞に掲載されました！（ダイジェストも紹介されています）</dt>
+					<dd>
+						<a href="https://www.kobe-np.co.jp/news/miki/201706/0010253858.shtml" title="神戸新聞掲載記事" target="_blank" >
+							詳細はこちら
+						</a>
+					</dd>
+					<dt>(06/04) 第５回東播フォークジャンボリーは無事終了いたしました！</dt>
+					<dd>
+						第５回東播フォークジャンボリーは無事終了いたしました！<br/>
+						初めての試みの２会場同時並行。<br/>
+						両会場とも盛況で参加者全員の協力で大成功に終えることが出来ました。<br/><br/>
+
+						観客は過去最高の約５００名。<br/>
+						演奏参加者は７３名 スタッフは９名<br/>
+						６００名近くの方々が、会場に集まってくれました。<br/><br/>
+
+						終演後、ロビーにて「♪～部屋のあかり消したまままたあうその日まで♪～♪」を出演者で合唱しながら観客の皆様をお見送りしました。<br/>
+						観客の皆様、スタッフの皆さん、演奏者の皆さん お疲れ様でした。来年また、お会いしましょう。
+					</dd>
 					<dt>(06/02)ラジオ関西でインタビューがオンエアされます。</dt>
 					<dd>
 						ラジオ関西「わがまちひょうご」でインタビューがオンエアされます。時間は 06/02 17:15-17:25 です。
