add finish post 2

--- a/tobanFJ_2017/index.html
+++ b/tobanFJ_2017/index.html
@@ -57,11 +57,26 @@
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(06/10) 皆様お疲れ様。2018年にまたお会いしましょう！</dt>
+					<dd>
+						<a href="img/report_01.jpg" rel="lightbox" title="集合写真1">
+							<img src="img/report_01.jpg" width="480" />
+						</a>
+						<br/>
+						<a href="img/report_02.jpg" rel="lightbox" title="集合写真2">
+							<img src="img/report_02.jpg" width="480" />
+						</a>
+					</dd>
 					<dt>(06/05) 神戸新聞に掲載されました！（ダイジェストも紹介されています）</dt>
 					<dd>
 						<a href="https://www.kobe-np.co.jp/news/miki/201706/0010253858.shtml" title="神戸新聞掲載記事" target="_blank" >
 							詳細はこちら
 						</a>
+						<br/>
+						<a href="img/news_060501.jpg" rel="lightbox" title="神戸新聞掲載記事">
+							<img src="img/news_060501.jpg" width="480" />
+						</a>
+					</dd>
 					</dd>
 					<dt>(06/04) 第５回東播フォークジャンボリーは無事終了いたしました！</dt>
 					<dd>
