youtubeのまとめ動画を埋め込み

--- a/tobanFJ_2017/index.html
+++ b/tobanFJ_2017/index.html
@@ -51,12 +51,41 @@
 		</div>
 		<div class="separete"></div>
 
+		<a name="content07"></a>
+		<div class="content-box">
+		   <div class="content-header">
+			   まとめ動画(youtube)
+		   </div>
+		   <div class="content-body">
+			   <dl>
+				   <dt>東播フォークジャンボリー2017　ホール会場出演バンドダイジェスト映像</dt>
+				   <dd>
+					   <iframe width="560" height="315" src="https://www.youtube.com/embed/38VPHRdjW9A" frameborder="0" allowfullscreen></iframe>
+				   </dd>
+				   <dt>東播フォークジャンボリー2017メーキング映像</dt>
+				   <dd>
+					   <iframe width="560" height="315" src="https://www.youtube.com/embed/V-3Ll_jLeZo" frameborder="0" allowfullscreen></iframe>
+				   </dd>
+				   <dt>東播フォークジャンボリー2017　当日本番メーキング映像</dt>
+				   <dd>
+					   <iframe width="560" height="315" src="https://www.youtube.com/embed/BudZEqQe3h8" frameborder="0" allowfullscreen></iframe>
+				   </dd>
+			   </dl>
+		   </div>
+	   </div>
+
 		<div class="content-box">
 			<div class="content-header">
 				お知らせ
 			</div>
 			<div class="content-body">
 				<dl>
+					<dt>(09/04) 当日の参加バンドの３階ホールダイジェスト映像・前日準備の映像・当日メーキング映像が完成、YouTubeにupしました！</dt>
+					<dd>
+						<a href="#content07">
+							詳細はこちら
+						</a>
+					</dd>
 					<dt>(06/10) 皆様お疲れ様。2018年にまたお会いしましょう！</dt>
 					<dd>
 						<a href="img/report_01.jpg" rel="lightbox" title="集合写真1">
@@ -116,38 +145,6 @@
 				</dl>
 			</div>
 		</div>
-
-		<!--
-		<div class="content-box">
-			<div class="content-header">
-				PR情報<small>(新聞・ラジオ等の掲載情報)</small>
-			</div>
-			<div class="content-body">
-				<dl>
-					<dt>(06/09)神戸新聞に当日の様子が掲載されました。詳細はこちらをご覧ください。</dt>
-					<dd>
-						<a target="_blank" href="http://www.kobe-np.co.jp/news/miki/201506/0008105211.shtml">
-							ウェブサイトではこちらに掲載されています。
-						</a>
-						<br/>
-						<a href="img/0607_news_large.jpg" rel="lightbox" title="2015/06/09 神戸新聞掲載記事">
-							<img src="img/0607_news.jpg" width="480" />
-						</a>
-					</dd>
-					<dt>(5/25)神戸新聞に直前ミーティングの写真ととともに記事が掲載されました！</dt>
-					<dd>
-						<a target="_blank" href="http://www.kobe-np.co.jp/news/miki/201505/0008057208.shtml">
-							ウェブサイトではこちらに掲載されています。
-						</a>
-						<br/>
-						<a href="img/0525_news_large.jpg" rel="lightbox" title="2015/05/25 神戸新聞掲載記事">
-							<img src="img/0525_news.jpg" width="480" />
-						</a>
-					</dd>
-				</dl>
-			</div>
-		</div>
-		-->
 
 		<a name="content01"></a>
 		<div class="content-box">
